<resources>
    <string name="app_name">云互艺</string>
    <string name="app_name_Chinese">艺培达人</string>
    <string name="selected_topics">精选专题</string>
    <string name="assessment_authority">测评权威</string>
    <string name="hot_search">热门搜索</string>
    <string name="hository_search">历史搜索</string>
    <string name="search_hint">请输入关键字</string>
    <string name="clear_history">清除历史记录</string>
    <string name="score_inquiry">成绩查询</string>
    <string name="school_information">学校信息</string>
    <string name="hot_attention">热点关注</string>
    <string name="official_website">官方网站</string>
    <string name="search" >搜索</string>
    <string name="search_nothing" >没查到相关信息~</string>
    <string name="say_something">这一刻的想法...</string>
    <string name="comments">评论</string>
    <string name="take_photo" >拍照</string>
    <string name="btn_picture" >从相册中选取</string>
    <string name="img_cancel" >取消</string>
    <string name="picture_back" >返回</string>
    <string name="picture_all" >相册</string>
    <string name="picture_complete">完成</string>
    <string name="dialog_confirm">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_buy">立即购买</string>
    <string name="dialog_back">退出直播间</string>
    <string name="teacher_art">艺考专家</string>
    <string name="teacher_tec">名师</string>
    <string name="teacher_iart">iartSchool</string>
    <string name="teacher_intelligent">达人</string>
    <string name="teacher_review">点评</string>
    <string name="teacher_sentiment">人气</string>
    <string name="teacher_fans">粉丝</string>
    <string name="teacher_mess">开小灶</string>
    <string name="live_time">距离下次开课还有</string>
    <string name="live_noting">暂无直播课程</string>
    <string name="live_day">天</string>
    <string name="live_hour">时</string>
    <string name="live_minute">分</string>
    <string name="live_chapter">章节</string>
    <string name="my_examine">我的志愿表</string>
    <string name="examine_results">成绩：</string>
    <string name="examine_ranking">省市排名：</string>
    <string name="examine_second_text">根据你的成绩，推荐最优志愿填报方案如下</string>
    <string name="my_course_live">直播课</string>
    <string name="my_course_video">视频课</string>
    <string name="rb_institutionAll">全部</string>
    <string name="rb_institution1">江西</string>
    <string name="rb_institution2">湖北</string>
    <string name="rb_institution3">广东</string>
    <string name="rb_institution4">湖南</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="load_empty">没有更多内容了</string>
    <string name="menu_local_video">本地视频</string>
    <string name="menu_online_video">在线视频</string>
    <string name="cube_views_load_more_loading">loading...</string>
    <string name="cube_views_load_more_click_to_load_more">Click to load more</string>
    <string name="cube_views_load_more_loaded_no_more">All the data has been loaded</string>
    <string name="cube_views_load_more_loaded_empty">It is empty. :(</string>
    <string name="cube_views_load_more_error">Load error, click to retry</string>
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="apply_need_attention">注意事项:\n1.仅提供文史、理工科数据。\n2.数据仅提供本科各批次，不包含高职(专科)\n3.数据仅供参考，因数据标准原因会有局部调整</string>
    <string name="login_user_id">请输入您的11位手机号</string>
    <string name="login_user_pwd">还有密码哦亲</string>
    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="giraffe_player_url_empty">Please specify the address of the video playback</string>
    <string name="small_problem">Player encountered a small problem</string>
    <string name="can_not_play">can not play this video</string>
    <string name="not_support">player not support this device</string>
    <string name="me_resigster_sendphone">中国+86</string>
    <string name="me_resigster_phone">请输入您的11位手机号码</string>
    <string name="me_resigster_protocol_hint">注册表示阅读并同意</string>
    <string name="me_resigster_user_agreement_hint">《用户协议》</string>
    <string name="me_chose_province">选择省份</string>
    <string name="me_chose_city">选择城市</string>
    <string name="me_chose_school">选择院校</string>
    <string name="me_cloud">我的云币</string>
    <string name="recharge">充值</string>
    <string name="about_cloud">关于云币</string>
    <string name="me_course">我的课程</string>
    <string name="me_order_manage">我的测评</string>
    <string name="me_collect">我的收藏</string>
    <string name="me_comments">我的评论</string>
    <string name="me_msg">我的消息</string>
    <string name="me_coupons">优惠券</string>
    <string name="me_feedback">反馈建议</string>
    <string name="me_setting">设置</string>
    <string name="me_transfor">传输列表</string>
    <string name="me_certificate">师哥师姐</string>
    <string name="me_setting_wifi">仅wifi观看</string>
    <string name="me_setting_help">帮助</string>
    <string name="me_setting_suggest">反馈</string>
    <string name="me_setting_clean">清除缓存</string>
    <string name="me_setting_managedownload">下载管理</string>
    <string name="me_setting_about">关于我们</string>
    <string name="me_setting_logout">退出账号</string>
    <string name="me_setting_update">版本检查</string>
    <string name="me_setting_manage">账号管理</string>
    <string name="me_setting_email">邮箱</string>
    <string name="me_setting_phone">手机</string>
    <string name="me_setting_qqGroup">QQ群</string>
    <string name="me_setting_introduction">简介</string>
    <string name="me_setting_commonProblems">常见问题</string>
    <string name="me_setting_teas">吐槽下</string>
    <string name="me_setting_changePwd">修改密码</string>
    <string name="feedback_submit">提交</string>
    <string name="feedback_phone">联系电话</string>
    <string name="feedback_phone_hint">选填，便于我们联系你</string>
    <string name="feedback_content_hint">请输入遇到的问题或意见...</string>
    <string name="chose_pay">请选择支付方式</string>
    <string name="money">提交</string>
    <string name="loading_text">正在加载····</string>
    <string name="next">下一步</string>
    <string name="ok">完成</string>
    <string name="login_btn_text">登录</string>
    <string name="about_head_text">头像</string>
    <string name="about_name_text">用户名</string>
    <string name="about_sex_text">性别</string>
    <string name="about_city_text">地区</string>
    <string name="about_identity_text">身份</string>
    <string name="about_school_text">学校</string>
    <string name="about_intentional_college_text">报考院校</string>
    <string name="about_org_text">培训机构</string>
    <string name="about_header_cancel">取消</string>
    <string name="about_header_takepic">拍照</string>
    <string name="about_header_chosepic">从相册选择</string>
    <string name="about_professional_text">专业</string>
    <string name="about_updatename_text">编辑昵称</string>
    <string name="setting_clean_hint">您确定要清除数据吗?</string>
    <string name="setting_clean_btn">清除数据</string>
    <string name="rb_me_clean_pwd">账号密码</string>
    <string name="rb_me_clean_data">用户信息</string>
    <string name="rb_me_clean_cache">缓存数据</string>
    <string name="test_about_head_text"></string>
    <string name="test_about_phone_text">188****7006</string>
    <string name="test_about_name_text">昵称</string>
    <string name="test_about_change_phone">更换手机号码</string>
    <string name="test_about_sex_text">性别</string>
    <string name="test_about_city_text">南昌</string>
    <string name="test_about_identity_text">艺术生</string>
    <string name="test_about_intentional_college_text">江西师范大学</string>
    <string name="test_about_org_text">南昌当代艺术</string>
    <string name="test_about_professional_text">声乐+钢琴</string>
    <string name="music_text">声乐</string>
    <string name="dance_text">舞蹈</string>
    <string name="perform_text">表演</string>
    <string name="director_text">编导</string>
    <string name="musical_text">器乐</string>
    <string name="pint_text">书画</string>
    <string name="valuation_type_text">测评类型：</string>
    <string name="valuation_name_hint_text">作品名称</string>
    <string name="valuation_chose_teacher_text">选择老师：</string>
    <string name="valuation_paycost_text">测评费用</string>
    <string name="valuation_pay_text">实付金额</string>
    <string name="valuation_describe_hint_text">作品描述</string>
    <string name="valuation_music_text">音频</string>
    <string name="valuation_video_text">视频</string>
    <string name="valuation_image_text">图片</string>
    <string name="valuation_media_music_title">请选择要上传的音乐</string>
    <string name="valuation_media_video_title">请选择要上传的视频</string>
</resources>