<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:id="@+id/ll_wifi"
        style="@style/me_linearlayout"
        android:gravity="center">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/me_setting_wifi" />


        <ImageView
            android:id="@+id/wifi_setting"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ab_on" />

    </LinearLayout>

    <include layout="@layout/item_divider" />

    <LinearLayout
        android:id="@+id/ll_location"
        style="@style/me_linearlayout"
        android:gravity="center">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/me_setting_help" />


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/bt_right" />

    </LinearLayout>

    <include layout="@layout/item_divider" />

    <LinearLayout
        android:id="@+id/ll_cleanData"
        style="@style/me_linearlayout"
        android:gravity="center">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/me_setting_clean" />


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/bt_right" />

    </LinearLayout>

    <include layout="@layout/item_divider" />

    <LinearLayout
        android:id="@+id/ll_download"
        style="@style/me_linearlayout"
        android:gravity="center">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/me_setting_managedownload" />


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/bt_right" />

    </LinearLayout>

    <include layout="@layout/item_divider" />

    <LinearLayout

        android:id="@+id/ll_about"
        style="@style/me_linearlayout"
        android:gravity="center">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/me_setting_about" />


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/bt_right" />

    </LinearLayout>

    <include layout="@layout/item_divider" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:text="@string/me_setting_logout" />

</LinearLayout>
