<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            style="@style/BaseTextView"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:drawableTop="@mipmap/view_performance"
            android:text="@string/music_text" />

        <TextView
            android:textColor="@color/white"
            style="@style/BaseTextView"
            android:layout_weight="1"
            android:drawableTop="@mipmap/view_performance"
            android:text="@string/dance_text" />

        <TextView
            style="@style/BaseTextView"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:drawableTop="@mipmap/view_performance"
            android:text="@string/perform_text" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@mipmap/icon_popwindow_close" />
</LinearLayout>