<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/title_layout"/>

    <LinearLayout
        android:id="@+id/ll_province"
        style="@style/me_linearlayout"
        android:layout_marginTop="5dp"
        android:gravity="center">


        <TextView
            android:id="@+id/tv_province"
            style="@style/me_about_textview_left"
            android:layout_weight="1"
            android:text="@string/me_chose_province" />


        <include layout="@layout/arrow_right_image" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_city"
        style="@style/me_linearlayout"
        android:layout_marginTop="5dp"
        android:gravity="center">


        <TextView
            android:id="@+id/tv_city"
            style="@style/me_about_textview_left"
            android:layout_weight="1"
            android:text="@string/me_chose_city" />


        <include layout="@layout/arrow_right_image" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_org_or_school"
        style="@style/me_linearlayout"
        android:layout_marginTop="5dp"
        android:gravity="center">


        <TextView
            android:id="@+id/tv_org_school"
            style="@style/me_about_textview_left"
            android:layout_weight="1"
            android:text="@string/me_chose_school" />


        <include layout="@layout/arrow_right_image" />
    </LinearLayout>


</LinearLayout>