<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/main_title"/>
    <LinearLayout
        android:layout_below="@+id/rl_title"
        android:id="@+id/ll_user_pwd"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_et_normal"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/blue_overlay"
            android:layout_marginLeft="5dp"
            android:text="@string/me_resigster_sendphone"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <include layout="@layout/main_splitter3" />

        <EditText
            android:digits="1234567890."
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:textSize="@dimen/miniSize"
            android:id="@+id/et_login_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/me_resigster_phone" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_below="@+id/ll_user_pwd"
        android:id="@+id/ll_recommend"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_et_normal"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/blue_overlay"
            android:layout_marginLeft="5dp"
            android:text="推荐码"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <include layout="@layout/main_splitter3" />

        <EditText
            android:digits="1234567890."
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:textSize="@dimen/miniSize"
            android:id="@+id/et_recommend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="选填" />
    </LinearLayout>

    <TextView
        android:id="@+id/ress_hint"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/ll_recommend"
        android:text="@string/me_resigster_protocol_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/ress_hint2"
        android:textColor="@color/blue_overlay"
        android:layout_toRightOf="@+id/ress_hint"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/ll_recommend"
        android:text="@string/me_resigster_user_agreement_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button

        android:layout_below="@+id/ress_hint2"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/blue_overlay"
        android:id="@+id/btn_register_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />
</RelativeLayout>